...
            .sheet(isPresented: $viewModel.newHabit) {
                NewHabitView(persistenceController: viewModel.persistenceController)
            }
            .toolbar {
                ToolbarItem {
                    Button(action: viewModel.showNewHabitView) {
                        Label("Add Habit", systemImage: "plus")
                    }
                }
#if DEBUG
                ToolbarItem {
                    Button {
                        viewModel.persistenceController.createSampleData()
                    } label: {
                        Label("ADD SAMPLES", systemImage: "flame")
                    }
                }
                ToolbarItem {
                    Button {
                        viewModel.persistenceController.deleteAll()
                    } label: {
...
